can add multiple photos to item with administrate

--- a/app/views/fields/has_many_attached_field/_form.html.erb
+++ b/app/views/fields/has_many_attached_field/_form.html.erb
@@ -1,15 +1,16 @@
 <div class="field-unit__label">
   <%= f.label field.attribute %>
+
   <% if field.data.attached? %>
     <small class="hint">
-      Adding a new <%= field.attribute %> will erase the existing one
+      <%= render 'admin/shared/modal_photos', field: field %>
     </small>
   <% end %>
 </div>
 <div class="field-unit__field">
   <div class="dropzone-container">
-    <div class="dropzone">Click or drop file here</div>
-    <%= f.file_field field.attribute, direct_upload: true, class: 'dropzone-input' %>
+    <div class="dropzone">Click or drop files here</div>
+    <%= f.file_field field.attribute, direct_upload: true, multiple: true, class: 'dropzone-input' %>
   </div>
   <div class="dropzone-files"></div>
 </div>
