--- a/app/views/admin/items/_form.html.erb
+++ b/app/views/admin/items/_form.html.erb
@@ -36,10 +36,21 @@ and renders all form fields for a resource's editable attributes.
   <% page.attributes.each do |attribute| -%>
     <div class="field-unit field-unit--<%= attribute.html_class %> field-unit--<%= requireness(attribute) %>">
       <%= render_field attribute, f: f %>
+
     </div>
   <% end -%>
+
 
   <div class="form-actions">
     <%= f.submit %>
   </div>
 <% end %>
+
+
+<!-- not working yet
+ -->
+<!-- <div class="field-unit">
+    <%#= simple_form_for namespace, remote: true do |f| %>
+      <%#= f.input :category, as: :select, collection: Item::CATEGORY %>
+    <%# end %>
+  </div> -->
