--- a/app/views/user_mailer/welcome.text.erb
+++ b/app/views/user_mailer/welcome.text.erb
@@ -1,6 +1,5 @@
-Hello, <%= @user.name %> You have successfully signed up to mabciaceramic.com,
-your username is: <%= @user.email %>.
+Bienvenue sur mabciaceramic.com, <%= @user.name %>
+Avoir un compte vous permet de commander sur la boutique ou vous trouverez des objets d'ornement et des articles à usage quotidien qui embelliront vos intérieurs, vos extérieurs mais aussi vos aquariums !
 
-To login to the site, just follow this link: <%= link_to "Click here", root_url %>.
-
-Thanks for joining and have a great day!
+Pour vous connecter, <%= link_to "Cliquer ici", root_url %>.
+Merci de votre intérêt pour mon travail et bonne exploration !
