--- a/app/views/user_mailer/order_confirmation.html.erb
+++ b/app/views/user_mailer/order_confirmation.html.erb
@@ -3,16 +3,18 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h1>Hey, <%= @user.name %></h1>
+    <h1>Bonjour, <%= @user.name %></h1>
     <p>
-      You have successfully Ordered :
-      <% @baught_items.each do |item| %>
-      <%= item.title %>
-      <% end %>.<br>
+      Vous avez commandé avec succès :
+      <% @bought_items.each do |bought_item| %>
+      <%= bought_item.item.title %>
+      <%= bought_item.item.price %>€
+      <% end %>
     </p>
+    <p>Total : <%= @order.amount %>€ </p>
     <p>
-      The items will arrived soon
+      Je m'occupe d'envoyer tout ça le plus rapidement possible ! Vous recevrez un email pour vous confirmer l'expedition ainsi qu'un numéro de suivis pour votre colis
     </p>
-    <p>Thanks and have a great day!</p>
+    <p>Merci pour votre commande et passez une bonne journée!</p>
   </body>
 </html>
