--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -78,7 +78,11 @@
       <div class="px-4 inline-flex space-x-2 md:px-8 lg:justify-center lg:grid lg:grid-cols-3 lg:space-x-0 lg:gap-3 lg:px-16 xl:px-0.5">
         <% @items.first(6).each do |item| %>
           <%= link_to item_path(item), class:"group" do %>
-          <div class="shadow-3xl rounded pb-2 w-60 lg:w-full hover:opacity-80 focus:outline-none">
+          <% if item.sold? %>
+            <div class="shadow-3xl rounded pb-2 w-60 lg:w-full opacity-60 focus:outline-none">
+          <% else %>
+            <div class="shadow-3xl rounded pb-2 w-60 lg:w-full hover:opacity-80 focus:outline-none">
+          <% end %>
             <div class="relative h-64 lg:h-72 xl:h-60" style="padding-bottom: 80%">
               <%= cl_image_tag item.photos[0].key, class:'rounded-t absolute h-full w-full inset-0 object-cover shadow'  %>
             </div>
@@ -89,9 +93,15 @@
               <div class="px-2 pt-1">
                 <span class="font-bold"> <%= item.price %>€ </span>
               </div>
-              <div class="px-2 py-2">
-                <span class="rounded-full px-2 py-1 bg-japonica-300 text-gray-800 text-xs font-bold">Livraison GRATUITE</span>
-              </div>
+              <% if item.sold? %>
+                <div class="px-2 py-2">
+                  <span class="rounded px-2 py-1 bg-japonica-900 text-white text-xs font-bold">Vendu</span>
+                </div>
+              <% else %>
+                <div class="px-2 py-2">
+                  <span class="rounded-full px-2 py-1 bg-japonica-300 text-gray-800 text-xs font-bold">Livraison GRATUITE</span>
+                </div>
+              <% end %>
             </div>
           </div>
           <% end %>
