front change to menu and buttons on navbar

--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -3,19 +3,19 @@
                   required: false,
                   autofocus: true,
                   label: false,
-                  placeholder: '18 rue saint marcelin',
+                  placeholder: 'Patrick',
                   input_html: { class: "px-2 py-4 border-2 border-gray-200 w-full rounded-lg"} %>
 
       <%= f.input :email,
                   required: false,
                   label: false,
-                  placeholder: "Complément d'adresse",
+                  placeholder: "patricycles@gmail.com",
                   input_html: { class: "px-2 py-4 border-2 border-gray-200 w-full rounded-lg"} %>
 
       <%= f.input :message,
                   required: false,
                   label: false,
-                  placeholder: "75000",
+                  placeholder: "Bonjour, je souhaite vous contacter pour vous demander de réaliser un objet sur mesure...",
                   input_html: { class: "px-2 py-4 border-2 border-gray-200 w-full rounded-lg"} %>
 
 
