--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -3,32 +3,60 @@
 
   <p>Oops ! Vous n'êtes pas aller jusqu'au bout du paiement ! Vous pouvez recommencer en visualisant votre panier en haut de votre écran si vous le souhaitez ! Si vous avez des questions, n'hésitez pas à me contacter</p>
 
-<% else %>
+<% elsif @order.paid?%>
 
-<div class="px-4 pt-10">
-  <h2 class="font-bold text-xl">Commande n°<%= @order.id %>(<%= @order.status %>)</h2>
-  <div class="pt-4">
-    <span>Votre colis est en route ! Le délai de livraison est estimé à quelques jours...</span>
-  </div>
-  <div class="pt-2">
-   <span>Date : <%= @order.updated_at.strftime("%d/%m/%Y") %></span>
-  </div>
-
-  <% @cart.cart_items.each do |cart_item| %>
-    <div class="px-16 flex flex-col items-start">
-      <div class="pt-8">
-        <%= cl_image_tag cart_item.item.photos[0].key, class:"w-full h-36 object-cover rounded-xl" %>
-      </div>
-      <span class="font-bold pt-2"><%= cart_item.item.title %></span>
-      <div class="flex justify-between w-full">
-        <span class="text-japonica-500"> <%= cart_item.item.category %></span>
-        <span><%= humanized_money_with_symbol cart_item.item.price %> </span>
-      </div>
+  <div class="px-4 pt-10">
+    <h2 class="font-bold text-xl">Commande n°<%= @order.id %>(<%= @order.status %>)</h2>
+    <div class="pt-4">
+      <span>Votre colis est en cours de préparation ! Juste le temps de l'emballer et de le poster et c'est tout bon ! </span> <br>
+      <span>Vous recevrez un email de confirmation lorsque celui-ci sera envoyé ainsi qu'un numéro de suivis pour vous permettre de voir la progression de la livraison!</span>
     </div>
-  <% end %>
-  <div class="pt-10 font-medium text-gray-700">TOTAL : <%= humanized_money_with_symbol @order.amount %></div>
-</div>
+    <div class="pt-2">
+     <span>Votre commande à été effectuer le : <%= @order.updated_at.strftime("%d/%m/%Y, à %Hh%M") %></span>
+    </div>
 
+    <% @order.cart.cart_items.each do |cart_item| %>
+      <div class="px-16 flex flex-col items-start">
+        <div class="pt-8">
+          <%= cl_image_tag cart_item.item.photos[0].key, class:"w-full h-36 object-cover rounded-xl" %>
+        </div>
+        <span class="font-bold pt-2"><%= cart_item.item.title %></span>
+        <div class="flex justify-between w-full">
+          <span class="text-japonica-500"> <%= cart_item.item.category %></span>
+          <span><%= humanized_money_with_symbol cart_item.item.price %> </span>
+        </div>
+      </div>
+    <% end %>
+    <div class="pt-10 font-medium text-gray-700">TOTAL : <%= humanized_money_with_symbol @order.amount %></div>
+  </div>
+
+
+
+
+<% elsif @order.envoyé? %>
+  <div class="px-4 pt-10">
+    <h2 class="font-bold text-xl">Commande n°<%= @order.id %>(<%= @order.status %>)</h2>
+    <div class="pt-4">
+      <span>Votre colis est en route ! Le délai de livraison est estimé à quelques jours...</span>
+    </div>
+    <div class="pt-2">
+     <span>Votre commande à été effectuer le : <%= @order.updated_at.strftime("%d/%m/%Y, à %Hh%M") %></span>
+    </div>
+
+    <% @order.cart.cart_items.each do |cart_item| %>
+      <div class="px-16 flex flex-col items-start">
+        <div class="pt-8">
+          <%= cl_image_tag cart_item.item.photos[0].key, class:"w-full h-36 object-cover rounded-xl" %>
+        </div>
+        <span class="font-bold pt-2"><%= cart_item.item.title %></span>
+        <div class="flex justify-between w-full">
+          <span class="text-japonica-500"> <%= cart_item.item.category %></span>
+          <span><%= humanized_money_with_symbol cart_item.item.price %> </span>
+        </div>
+      </div>
+    <% end %>
+    <div class="pt-10 font-medium text-gray-700">TOTAL : <%= humanized_money_with_symbol @order.amount %></div>
+  </div>
 <% end %>
 
 
