--- a/app/views/shared/_nav_buttons_before_login.html.erb
+++ b/app/views/shared/_nav_buttons_before_login.html.erb
@@ -1,4 +1,4 @@
-<div class="flex space-x-2 xl:space-x-6">
+<div class="flex space-x-2 xl:space-x-4">
   <div>
     <%= link_to items_path, class:"" do %>
       <button class="w-full rounded px-2 py-1 text-base font-semibold text-gray-700 hover:bg-gray-100 focus:outline-none xl:text-lg">Magasin</button>
@@ -15,13 +15,18 @@
     <% end %>
   </div>
   <div>
+    <%= link_to new_contact_path, class:'' do %>
+    <button class="w-full rounded px-2 py-1 text-base font-semibold text-gray-700 hover:bg-gray-100 focus:outline-none xl:text-lg">Contactez-moi</button>
+    <% end %>
+  </div>
+  <div>
     <%= link_to  new_user_session_path, class:"" do %>
       <button class="w-full rounded px-2 py-1 text-base font-semibold text-gray-700 hover:bg-gray-100 focus:outline-none xl:text-lg">Se connecter</button>
     <% end %>
   </div>
-  <div>
-    <%= link_to  new_user_registration_path, class:"" do %>
+<!--   <div>
+    <%#= link_to  new_user_registration_path, class:"" do %>
       <button class="w-full rounded px-2 py-1 text-base font-semibold text-gray-700 hover:bg-gray-100 focus:outline-none xl:text-lg">Créer un compte</button>
-    <% end %>
-  </div>
+    <%# end %>
+  </div> -->
 </div>
