--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,6 @@
 
 <!-- Navbar sur mobile avec hamburger menu -->
-<nav data-controller="menu" class="lg:hidden">
+<nav data-controller="menu" class="sticky top-0 z-50 bg-white lg:hidden">
   <div class="flex items-center justify-between py-2 px-2 shadow">
 
     <div  class="flex items-center outline-none">
