--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,31 +1,32 @@
 
 <div data-controller="item-categories">
 
-  <div class="py-10 lg:py-20 max-w-6xl mx-auto">
+  <div class="py-20 lg:py-20 max-w-6xl mx-auto">
     <div class="px-2 md:px-4">
-      <h2 class="text-3xl font-bold text-left text-gray-900 lg:text-4xl">Mes créations du moment</h2>
+      <h2 class="text-3xl font-medium text-left text-gray-700 lg:text-4xl">Mes créations du moment</h2>
+      <p class="pt-2 text-sm text-gray-600">Explorez ma séléction personnelle d'objet que j'ai réalisée à la main dans mon ateliers. Des objets du quotidiens, décoratifs, pour votre intérieur ou votre aquarium, il y en a pour tous les goûts.</p>
     </div>
 
 
     <!-- Search section with search bar submit and reset button -->
-    <div class="mx-2 md:mx-4 lg:pt-2 flex items-center ">
+    <!-- <div class="mx-2 md:mx-4 lg:pt-2 flex items-center ">
 
-      <%= link_to items_path do %>
+      <%#= link_to items_path do %>
         <button class="px-6 py-4 uppercase tracking-tight text-sm font-semibold border-2 border-white rounded-xl hover:bg-white hover:text-japonica-500">Reset</button>
-      <% end %>
+      <%# end %>
 
-      <%= form_tag items_path, class:'flex items-center  border-b-2 border-gray-200', method: :get do %>
+      <%#= form_tag items_path, class:'flex items-center  border-b-2 border-gray-200', method: :get do %>
 
         <div><svg class="w-6 text-gray-500"xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"><path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" clip-rule="evenodd"/></svg></div>
 
-        <%= text_field_tag :query,
+        <%#= text_field_tag :query,
           params[:query],
           placeholder: "Chercher par nom, catégories, matériaux..", class:'mx-2 text-base py-4 focus:outline-none w-full tracking-tighter'
         %>
-        <%= submit_tag "Search", class:'hidden'%>
+        <%#= submit_tag "Search", class:'hidden'%>
 
-      <% end %>
-    </div>
+      <%# end %>
+    </div> -->
 
 
 <!-- Catégories filtrer par query -->
@@ -47,12 +48,12 @@
 
 <!-- Catégories filtrer en front en JS  -->
 
-    <div class="py-4 mt-3 mx-2 overflow-x-auto scrollbars-hidden bg-gray-200 md:mx-4">
-      <div class="px-4 inline-flex items-center text-center space-x-4">
+    <div class="py-4 mt-10 mx-2 overflow-x-auto scrollbars-hidden md:mx-4">
+      <div class="px-4 inline-flex items-center text-center space-x-2">
 
-        <button data-action="click->item-categories#displayAll" data-item-categories-target="allButton" class="font-medium text-gray-600 whitespace-nowrap focus:outline-none">Tout voir</button>
+        <button data-action="click->item-categories#displayAll" data-item-categories-target="allButton" class="px-3 py-2 text-sm text-white rounded-full  border border-gray-200 whitespace-nowrap focus:outline-none">Tout voir</button>
         <% @categories.each do |category| %>
-          <button data-action="click->item-categories#display" data-type="<%= category %>" data-item-categories-target="categoryButton" class="font-medium text-gray-600 whitespace-nowrap focus:outline-none"> <%= category %> </button>
+          <button data-action="click->item-categories#display" data-type="<%= category %>" data-item-categories-target="categoryButton" class="px-3 py-2 text-sm rounded-full border border-gray-200 text-japonica-500 whitespace-nowrap focus:outline-none"> <%= category %> </button>
         <% end %>
       </div>
     </div>
@@ -60,7 +61,7 @@
 
     <!-- All items reserve grid -->
 
-    <div data-item-categories-target="allCategory" class="hidden px-2 pt-4 grid grid-cols-2 gap-2 md:px-4 lg:grid-cols-3 xl:grid-cols-4 lg:gap-4">
+    <div data-item-categories-target="allCategory" class="hidden px-2 pt-6 grid grid-cols-2 gap-2 md:px-4 lg:grid-cols-3 xl:grid-cols-4 lg:gap-4">
       <% @items.each do |item| %>
         <%= link_to item_path(item), class:"group" do %>
             <div class="shadow-3xl rounded pb-2">
@@ -121,7 +122,7 @@
 
 
  <!--    My display grid is here, it is where cards finish their course  -->
-    <div id="table" class="px-2 pt-4 grid grid-cols-2 gap-2 md:px-4 lg:grid-cols-3 xl:grid-cols-4 lg:gap-4">
+    <div id="table" class="px-2 pt-8 grid grid-cols-2 gap-2 md:px-4 lg:grid-cols-3 xl:grid-cols-4 lg:gap-4">
 
     </div>
 
