--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,7 +1,7 @@
 
 <div data-controller="item-categories">
 
-  <div class="py-24 lg:py-36 max-w-7xl mx-auto">
+  <div class="py-24 lg:py-36 xl:px-4">
     <div class="px-2 md:px-6">
       <h2 class="text-3xl font-medium text-left text-gray-800 lg:text-4xl">Mes créations du moment</h2>
       <p class="pt-2 text-sm text-gray-600 max-w-md">Explorez ma séléction personnelle d'objet que j'ai réalisée à la main dans mon ateliers. Des objets du quotidiens, décoratifs, pour votre intérieur ou votre aquarium, il y en a pour tous les goûts.</p>
