--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -24,7 +24,7 @@
 
 
 
-    <h1 class="px-8 text-center text-2xl font-medium">Je crée mon compte</h1>
+    <h1 class="px-8 pt-4 text-center text-2xl font-medium">Je crée mon compte</h1>
 
     <div class="py-6 text-center max-w-xs mx-auto">
       <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
