--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -8,9 +8,9 @@
 </div>
 
 
-<div class="px-2 pb-8 lg:py-8 lg:max-w-4xl 2xl:max-w-5xl mx-auto">
+<div class="px-2 pb-8 lg:py-8 max-w-7xl mx-auto">
   <div class="flex justify-between lg:flex-col-reverse">
-    <span class="font-bold text-lg md:text-xl lg:text-2xl 2xl:text-3xl "><%= @item.title %></span>
+    <span class="font-bold text-gray-700 text-lg md:text-xl lg:text-2xl 2xl:text-3xl"><%= @item.title %></span>
     <span class="text-japonica-500 font-medium lg:text-lg"><%= @item.category %></span>
   </div>
 
@@ -92,7 +92,7 @@
       <% end %>
     </div>
 
-    <div class="md:flex md:flex-col max-w-2xl md:mr-2 md:w-3/5">
+    <div class="md:flex md:flex-col max-w-3xl md:mr-2 md:w-3/5">
       <div data-controller="item-descriptions">
         <div class="mt-4 md:-mt-4 py-2 px-2 flex justify-between items-center bg-gray-100 lg:mt-4">
           <button data-action="click->item-descriptions#descriptionToggle" class="flex justify-between w-full focus:outline-none">
