--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,23 +1,51 @@
-<%= simple_form_for @contact do |f| %>
-      <%= f.input :name,
-                  required: false,
-                  autofocus: true,
-                  label: false,
-                  placeholder: 'Patrick',
-                  input_html: { class: "px-2 py-4 border-2 border-gray-200 w-full rounded-lg"} %>
-
-      <%= f.input :email,
-                  required: false,
-                  label: false,
-                  placeholder: "patricycles@gmail.com",
-                  input_html: { class: "px-2 py-4 border-2 border-gray-200 w-full rounded-lg"} %>
-
-      <%= f.input :message,
-                  required: false,
-                  label: false,
-                  placeholder: "Bonjour, je souhaite vous contacter pour vous demander de réaliser un objet sur mesure...",
-                  input_html: { class: "px-2 py-4 border-2 border-gray-200 w-full rounded-lg"} %>
 
 
-<%= f.button :submit, "Valider", class:'w-full font-medium bg-black text-white py-3 rounded-3xl' %>
-<% end %>
+<div class="px-2 py-20 lg:flex lg:justify-center space-x-12 lg:px-12">
+  <div class="max-w-md pr-12 lg:w-2/5">
+    <h1 class="text-3xl font-medium text-left text-gray-700 lg:text-4xl">Contactez-moi</h1>
+    <p class="pt-4 text-sm text-gray-500">Nullam risus blandit ac aliquam justo ipsum. Quam mauris volutpat massa dictumst amet. Sapien tortor lacus arcu.</p>
+
+    <div class="pt-4 flex items-center space-x-2">
+      <svg class="w-6 h-6 text-gray-400" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z"/></svg>
+      <span class="text-sm text-gray-500">+33 33 33 33</span>
+    </div>
+    <div class="pt-2 flex items-center space-x-2">
+      <svg class="w-6 h-6 text-gray-400" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"/></svg>
+      <span class="text-sm text-gray-500">toto@exemple.com</span>
+    </div>
+    <div class="pt-2">
+      <span class="text-sm text-gray-500">Intéressez par mon travail ? <span class="underline text-gray-800"><%= link_to "Toutes mes oeuvres", items_path %></span> </span>
+    </div>
+  </div>
+  <div class="pt-8 max-w-xl lg:w-3/5 lg:pt-0">
+    <%= simple_form_for @contact do |f| %>
+      <div class="space-y-4">
+
+          <%= f.input :name,
+                      required: false,
+                      autofocus: true,
+                      label: false,
+                      placeholder: 'Patrick',
+                      input_html: { class: "px-2 py-4 text-sm border-2 border-gray-200 w-full rounded-lg"} %>
+
+          <%= f.input :email,
+                      required: false,
+                      label: false,
+                      placeholder: "patricycles@gmail.com",
+                      input_html: { class: "px-2 py-4 text-sm border-2 border-gray-200 w-full rounded-lg"} %>
+
+          <%= f.input :message,
+                      required: false,
+                      label: false,
+                      placeholder: "Bonjour, je souhaite vous contacter pour vous demander de réaliser un objet sur mesure...",
+                      input_html: { class: "px-2 py-32 text-sm border-2 border-gray-200 w-full rounded-lg"} %>
+
+
+        <%= f.button :submit, "Envoyer", class:'w-full font-medium bg-black text-white py-3 rounded-3xl' %>
+      </div>
+    <% end %>
+  </div>
+</div>
+
+
+
